# rpa_anuencia

./: .env.template  README.md  gui.py  logger.py  main.py  pyproject.toml
modules/common/: DtoWebElementWrapperWithBetterRepr.py  helper_function__temp_browser_profile_dir__path.py  save_screenshot.py
modules/cra/: cra_verificar_se_existe_aba_autorizacao.py  log_in.py  xpath.py
modules/gae/: exception.py  gae_verificar_cda_liquidada_por_renavam.py  log_in.py  xpath.py
modules/webdriver/: close_webdriver.py  run_in_webdriver.py
modules/webdriver/webdriver_config/: set_default_firefox_options.py
modules/webdriver/webelement_action/: click_action.py  type_action.py
tasks/: format.py  util.py
tests/: carteira9.json  consultar_titulo.py  main.py  resultados_consulta.json
